--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -56,5 +57,13 @@ dependencies {
     //card view
     implementation("androidx.cardview:cardview:1.0.0")
 
-    //implementation ("androidx.support:design:28.0.0")
+    //navigation
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
+
+    //google sign in
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+    //facebook sign in
+    implementation 'com.facebook.android:facebook-android-sdk:12.0.0'
 }
